# ylib

./: CMakeLists.txt  build.bat  configure.bat  configure_vsbuild.bat  console.bat  test.bat  test_alloc.c  test_dict.c  test_io.c  test_mask.c  test_set.c  test_set.txt  test_set151120.vsps  test_set2.c  test_split.c  test_string.c  test_strip.c
include/ylib/: dict.h  io.h  set.h  std.h  string.h
src/: dict.c  io.c  set.c  std.c  string.c
